--- a/tile-element.html
+++ b/tile-element.html
@@ -35,7 +35,7 @@ is in null state. When another tile is moving, it cannot be active instead it is
 
 <link rel="import" href="bower_components/polymer/polymer.html">
 <link rel="import" href="cross-hair.html">
-<link rel="import" href="canvas-manager.html">
+<link rel="import" href="managed-canvas.html">
 
 <dom-module id="tile-element">
 
