--- a/utils.html
+++ b/utils.html
@@ -120,4 +120,108 @@ Utils.regex_from_list = function(a){
     }
 })();
 
+
+
+Utils.typed_array_manager = (function(){
+	// This is a thin wrapper around a map
+
+    var store = new Map();
+    var last_akey = 0;
+    var suffix = " (ta-manager)"; // can drop suffix using parseInt
+    var validate_akey = function(akey){
+        if((akey + "").indexOf(suffix) === -1)
+            throw "typed-array-manager was passed invalid akey";
+        return true;
+    }
+
+    return {
+        store_array: function(arr){
+            store.set(++last_akey, arr);
+            return last_akey + suffix;
+        },
+        get_array: function(akey){
+            if(!akey) return
+            return validate_akey(akey) && store.get(parseInt(akey));
+        },
+        get_array_clone: function(akey){
+            // note that the clone is not put in the store. It is
+            // inteded to be used when dealing with workers, and needing to 
+            // transfer an array in its intereity to another thread.
+            if(!akey) return
+            var a = this.get_array(akey);
+            return a && new a.constructor(a);
+        },
+        free_array: function(akey){
+            validate_akey(akey);
+            store.delete(parseInt(akey));
+        }
+    };
+
+})();
+
+
+Utils.file_manager = (function(){
+	// This is a thin wrapper around an array, note that you can never remove files once added
+    var store = [];
+    
+    return {
+        store_file: function(file){
+            store.push(file);
+            return store.length -1;
+        },
+        get_file: function(fkey){
+            if(!fkey) return
+            return store[fkey];
+        }
+    };
+
+})();
+
+
+
+Utils.canvas_manager = (function(){
+	// This is a little bit more than a thin wrapper around a Map
+
+    var store = new Map(); // store of canvas els
+    var last_ckey = 0;
+    var suffix = " (canvas-manager)"; // can drop suffix using parseInt
+    var validate_id = function(id){
+        if((id + "").indexOf(suffix) === -1)
+            throw "canvas-manager was passed invalid id";
+        return true;
+    }
+
+   return {
+        store_from_buffer: function(buffer, dims){
+            var el = document.createElement("canvas");
+            el.width = dims[0];
+            el.height = dims[1];
+            var ctx = el.getContext('2d');
+
+            var im_data = ctx.createImageData(dims[0], dims[1]);
+            im_data.data.set(new Uint8ClampedArray(buffer));
+            ctx.putImageData(im_data, 0, 0);
+            store.set(++last_ckey, el);
+            return last_ckey + suffix;
+        },
+        store_from_dims: function(dims){
+            var el = document.createElement("canvas");
+            el.width = dims[0];
+            el.height = dims[1];
+            store.set(++last_ckey, el);
+            return last_ckey + suffix;
+        },
+        get_canvas: function(id){
+            return validate_id(id) && store.get(parseInt(id));
+        },
+        get_2d_ctx: function(id){
+            return validate_id(id) && store.get(parseInt(id)).getContext('2d');
+        },
+        free_canvas: function(id){
+            validate_id(id);
+            store.delete(parseInt(id));
+        }
+    };
+
+})();
 </script>
