--- a/rm-plots.html
+++ b/rm-plots.html
@@ -28,6 +28,8 @@ TODO: produce spike pos plots on demand
 
 <link rel="import" href="bower_components/polymer/polymer.html">
 <link rel="import" href="worker-builder.html">
+<link rel="import" href="managed-canvas.html">
+<link rel="import" href="utils.html">
 
 <dom-module id="rm-plots">
 
@@ -642,8 +644,8 @@ var is_equal_simple = function(a, b){
             this.pos_speed_is_on_worker = false;
         },
         _update_keys: function(keys_to_remove, keys_to_add, generation_remove, generation_add){
-            var am = window.typed_array_manager;
-            var cm = window.canvas_manager;
+            var am = Utils.typed_array_manager;
+            var cm = Utils.canvas_manager;
 
             var added_arrays = {};
             if (this.show !== 'nnn'){
@@ -747,7 +749,7 @@ var is_equal_simple = function(a, b){
         _pos_xy_modified: function(){
             if(this.show && this.show[0] === 'y'){
                 if(this.pos_xy){
-                    var arr = window.typed_array_manager.get_array_clone(this.pos_xy.data);
+                    var arr = Utils.typed_array_manager.get_array_clone(this.pos_xy.data);
                     this.worker.exec_b('set_pos_xy', this.pos_xy.timebase, this.pos_xy.units_per_cm, {data: arr});
                 } else {
                     if(!this.worker) return;
@@ -764,7 +766,7 @@ var is_equal_simple = function(a, b){
         _pos_dir_modified: function(){
             if(this.show && this.show[1] === 'y'){
                 if(this.pos_dir){
-                    var arr = window.typed_array_manager.get_array_clone(this.pos_dir.data);
+                    var arr = Utils.typed_array_manager.get_array_clone(this.pos_dir.data);
                     this.worker.exec_b('set_pos_dir', this.pos_dir.timebase, {data: arr});
                 } else {
                     if(!this.worker) return;
@@ -781,7 +783,7 @@ var is_equal_simple = function(a, b){
         _pos_speed_modified: function(){
             if(this.show && this.show[2] === 'y'){
                 if(this.pos_speed){
-                    var arr = window.typed_array_manager.get_array_clone(this.pos_speed.data);
+                    var arr = Utils.typed_array_manager.get_array_clone(this.pos_speed.data);
                     this.worker.exec_b('set_pos_speed', this.pos_speed.timebase, {data: arr});
                 } else {
                     if(!this.worker) return;
@@ -798,7 +800,7 @@ var is_equal_simple = function(a, b){
          _times_modified: function(){
             if(this.show !== 'nnn'){
                 if(this.spike_times){
-                    var arr = window.typed_array_manager.get_array_clone(this.spike_times.data);
+                    var arr = Utils.typed_array_manager.get_array_clone(this.spike_times.data);
                     this.worker.exec_b('set_spike_times', this.spike_times.timebase, {data: arr});
                 } else {
                     if(!this.worker) return;
